# habit_tracker

./: .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule.bak  deploy.sh  docker-compose.yaml  gitlab-ci.yml  manage.py  pyproject.toml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  apps.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_reminder.py
users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
